--- a/cdk_setup.yml
+++ b/cdk_setup.yml
@@ -26,10 +26,10 @@ Resources:
           - ServerSideEncryptionByDefault:
               SSEAlgorithm: AES256
       PublicAccessBlockConfiguration:
-          - BlockPublicAcls: true
-            BlockPublicPolicy: true
-            IgnorePublicAcls: true
-            RestrictPublicBuckets: true
+        BlockPublicAcls: true
+        BlockPublicPolicy: true
+        IgnorePublicAcls: true
+        RestrictPublicBuckets: true
   StagingBucketPolicy:
     Type: AWS::S3::BucketPolicy
     Properties:
